@@ -1,6 +1,7 @@
 Version 1.05
-- Credit color is now lighter
-- Code is now commented
+- Added achievements for the last 3 assistants.
+- Credit color is now lighter.
+- Code is now commented.
 
 Version 1.04 - Bugfixes and Testing
 - Added buttons for Discord, and Testing. 
